@@ -21,9 +21,12 @@ import shop.chaekmate.core.book.dto.request.CreateTagRequest;
 import shop.chaekmate.core.book.dto.response.TagResponse;
 import shop.chaekmate.core.book.dto.request.UpdateTagRequest;
 import shop.chaekmate.core.book.entity.Tag;
+import shop.chaekmate.core.book.exception.DuplicateTagNameException;
+import shop.chaekmate.core.book.exception.TagNotFoundException;
 import shop.chaekmate.core.book.repository.TagRepository;
 
 @ActiveProfiles("test")
+@SuppressWarnings("NonAsciiCharacters")
 @ExtendWith(MockitoExtension.class)
 class TagServiceTest {
 
@@ -58,7 +61,7 @@ class TagServiceTest {
         when(tagRepository.findByName("Existing Tag")).thenReturn(Optional.of(new Tag("Existing Tag")));
 
         // when & then
-        assertThrows(RuntimeException.class, () -> tagService.createTag(request));
+        assertThrows(DuplicateTagNameException.class, () -> tagService.createTag(request));
     }
 
     @Test
@@ -85,7 +88,7 @@ class TagServiceTest {
         when(tagRepository.findById(tagId)).thenReturn(Optional.empty());
 
         // when & then
-        assertThrows(RuntimeException.class, () -> tagService.readTagById(tagId));
+        assertThrows(TagNotFoundException.class, () -> tagService.readTagById(tagId));
     }
 
     @Test
@@ -99,7 +102,7 @@ class TagServiceTest {
 
         // then
         assertThat(responses).hasSize(1);
-        assertThat(responses.get(0).name()).isEqualTo("Test Tag");
+        assertThat(responses.getFirst().name()).isEqualTo("Test Tag");
     }
 
     @Test
